# weathercli

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
src/: main.rs
src/services/: mod.rs  open_weather_strategy.rs  weather_service.rs  weatherapi_strategy.rs
src/utils/: config.rs  date.rs  mod.rs
