[package]
name = "weather_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
clap = { version = "4.1.6", features = ["derive"] }
serde = { version = "^1.0", features = ["derive"] }
confy = "0.5.1"
chrono = "0.4"
regex = "1.7"